--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p><a href="https://engineering.ug.edu.gh/">School of Engineering Sciences</a></p>
                 <p><a href="https://www.ug.edu.gh/agric-eng">Agricultural Engineering Department</a></p>
     </table>
-    <p>I am Yeboah Wadie, an accomplished agricultural engineer with a deep appreciation for the intricacies of programming and web development. Through my personal website, I aim to bridge the realms of agriculture and technology, harnessing their combined potential to drive innovation and sustainable practices. Join me on this extraordinary journey as we explore the possibilities of merging cutting-edge coding techniques with the ever-evolving landscape of farming. Together, we can cultivate a brighter future. If you have any specific requirements or ideas for your website, I am here to provide tailor-made solutions that reflect your vision and goals. Let's embark on this exciting digital adventure!"</p></td>
+    <p>I am Yeboah Wadie, an agricultural engineer with a deep appreciation for the intricacies of programming and web development. Through my personal website, I aim to bridge the realms of agriculture and technology, harnessing their combined potential to drive innovation and sustainable practices. Join me on this extraordinary journey as we explore the possibilities of merging cutting-edge coding techniques with the ever-evolving landscape of agriculture. Together, we can cultivate a brighter future. If you have any specific requirements or ideas for your website, I am here to provide tailor-made solutions that reflect your vision and goals. Let's embark on this exciting digital adventure.</p></td>
         </tr>
     <hr>
     <h3>Education</h3>
